--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-webpack-plugin": "^5.0.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "glob": "^10.2.7",
+    "glob": "^11.0.0",
     "identity-obj-proxy": "3.0.0",
     "imports-loader": "^5.0.0",
     "jest": "^29.5.0",
@@ -75,6 +75,9 @@
     "@grafana/schema": "^12.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
+  },
+  "overrides": {
+    "glob": "^11.0.0"
   },
   "packageManager": "npm@8.19.4"
 }
